Use Hugo pipes instead of gulp build

--- a/themes/jacobx1/assets/css/blog.scss
+++ b/themes/jacobx1/assets/css/blog.scss
@@ -2,7 +2,7 @@
 
 @import "./content.scss";
 @import "./sidebar.scss";
-@import "./syntax-highlighter.css";
+@import "./syntax-highlighter";
 @import "./footer.scss";
 @import "./post-categories.scss";
 @import "./post.scss";
