--- a/themes/jacobx1/layouts/partials/header.html
+++ b/themes/jacobx1/layouts/partials/header.html
@@ -20,7 +20,9 @@
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oxygen:400,700' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/all.min.css">
+    {{ $options := (dict "targetPath" "style.css" "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules/normalize.css")) }}
+    {{ $style := resources.Get "css/blog.scss" | resources.ToCSS $options | minify }}
+    <link rel="stylesheet" href="{{ $style.Permalink }}">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/index.xml" />
