Fix netlify build
commit 953367c10a8437422e423944e0a45b9a3ef5e275
Author: Jacob Schwind <jacobx1@gmail.com>
Date:   Sun Feb 10 16:38:09 2019 -0500

    Relative urls for build

commit 7c6f4c4abf795d974b3788e907c83e028dd894d7
Author: Jacob Schwind <jacobx1@gmail.com>
Date:   Sun Feb 10 16:34:45 2019 -0500

    Fix mixed content

commit 24d125f3f91b2f9d27f9e7c7799d28b88368b1d4
Author: Jacob Schwind <jacobx1@gmail.com>
Date:   Sun Feb 10 16:31:45 2019 -0500

    Remove hack and push assets

commit cf6cb65ad0cc67bd0dc03fdf5b6868972a78878b
Author: Jacob Schwind <jacobx1@gmail.com>
Date:   Sun Feb 10 16:21:59 2019 -0500

    Verbose output

commit b887d06188f2717b56fca0b1732b68b80d6ff604
Author: Jacob Schwind <jacobx1@gmail.com>
Date:   Sun Feb 10 16:16:59 2019 -0500

    Custom hugo

--- a/themes/jacobx1/layouts/partials/footer.html
+++ b/themes/jacobx1/layouts/partials/footer.html
@@ -8,5 +8,5 @@
 {{ $rainbow := resources.Get "js/rainbow-custom.min.js" }}
 {{ $scripts := resources.Get "js/scripts.js" }}
 {{ $allJs := slice $jquery $prettySocial $rainbow $scripts | resources.Concat "js/bundle.js" }}
-<script src="{{ $allJs.Permalink }}"></script>
+<script src="{{ $allJs.Permalink | relURL }}"></script>
 <script id="dsq-count-scr" src="//blog-jacobx1-com.disqus.com/count.js" async></script>
