--- a/themes/jacobx1/layouts/partials/header.html
+++ b/themes/jacobx1/layouts/partials/header.html
@@ -22,7 +22,7 @@
 
     {{ $options := (dict "targetPath" "style.css" "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules/normalize.css")) }}
     {{ $style := resources.Get "css/blog.scss" | resources.ToCSS $options | minify }}
-    <link rel="stylesheet" href="{{ $style.Permalink }}">
+    <link rel="stylesheet" href="{{ $style.Permalink | relURL }}">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/index.xml" />
