Style updates for 2019
    - Top header, always
    - center content
    - Shrink sticky header w/ to-top button
    - Remove unused template
    - Various tweaks

--- a/themes/jacobx1/assets/css/_config.scss
+++ b/themes/jacobx1/assets/css/_config.scss
@@ -2,6 +2,8 @@ $breakpoints: (
   'small': 48em
 ) !default;
 
+$body-max-width: 760px;
+
 $main-font: Arial, Helvetica, sans-serif;
 
 $color-primary: rgb(61, 146, 201);
