--- a/themes/jacobx1/assets/css/post.scss
+++ b/themes/jacobx1/assets/css/post.scss
@@ -14,7 +14,7 @@
 .post-description {
   color: #444;
   line-height: 1.8em;
-  max-width: 960px;
+  word-wrap: break-word;
 }
 .post-meta {
   color: #999;
