--- a/themes/jacobx1/layouts/_default/list.html
+++ b/themes/jacobx1/layouts/_default/list.html
@@ -3,7 +3,7 @@
 <div id="layout" class="pure-g">
   {{ partial "sidebar.html" . }}
 
-  <div class="content pure-u-1 pure-u-md-3-4">
+  <div class="content">
     <div>
       {{ range .Paginator.Pages }}
       <!-- A wrapper for all the blog posts -->
